
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Sanity fixes to misc processors
- Added access modifiers to methods in modElement
- Moved name character sanity checks for Elements to element class.
- Cleaned up element processors, added missing permission checks, filled out plugin event calls
- [#MODX-1355] Fixed erroneous label for quick create resource on Contexts
- [#MODX-1352] Remove stay-buttons from user update screen 
- [#MODX-1349] onDirty now fires on triggerfield-based TVs
- Cleanups to getList processors, bugfixes for grids
- [#MODX-1317] Fixed erroneous label for quick create resource; should be Document
- [#MODX-1316] Added menu title to quick create/update resource
- Fixed issues with User grid
- [#MODX-1325] Fixed console's download to file functionality
- [#MODX-1327], [#MODX-1340] Fixed issue with generation of new password
- Fixed locking
- Lots of PHP5-only optimizations

MODx Revolution 2.0.0-beta-4 (LastChangedRevision: 5880, LastChangedDate: 2009-10-19 09:04:47 -0500 (Mon, 19 Oct 2009))
====================================
- If memory limit is lower than 24M, force to 128M if possible
- Fixing setup text for memory limit checks.
- [#MODX-1080] Make sure traditional distribution doesnt need base directory writability
- Added modInstallTestSvn class for handling SVN-specific setup tests
- Fix to setup contexts controller to read existing paths on upgrade.
- setup/ memory_limit checks now only need to be 24M for setup/ to run.
- Updated to xPDO 1.0 revision 363 to fix "Error saving changes to parent object fk field action" messages being logged during install.
- Fixed issues with category remove dialog and lexicon topic grid