@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-1360] Fixed issue where publishedon was being reset in quick update
 - Sanity fixes to misc processors
 - Added access modifiers to methods in modElement
 - Moved name character sanity checks for Elements to element class.
